made a couple of hotfixes to the responsive css. z-index for nav ul wasn't working in Chrome because it didn't have a position. Also if the window size was changed while the .menu-up class was applied it was translating it up and making most of it disappeared. Fixed this by making the animation-name property none in the 500px media query.

--- a/css/general.css
+++ b/css/general.css
@@ -236,6 +236,7 @@ nav ul {
 	color: var(--text-primary);
 	transform: translate(0,-150px);
 	z-index: -100;
+	position: relative; /* z-index will fail in Chrome without this */
 	box-shadow: 5px 5px 10px rgba(125,125,125,.6);
 }
 
@@ -283,6 +284,10 @@ footer {
 /* This media query is more for the background image and won't be necessary on most pages */
 
 @media (min-width: 500px){
+	.menu-up {
+		animation-name: none;
+	}
+
 	.background-image {
 		background-image: url("../images/background-tablet.png");
 		background-size: cover;
